k8s/qa/apps/webhooks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mino-webhooks
  
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mino-webhooks
