k8s/qa/apps/webhooks/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-webhooks
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: mino-api-tls
      hosts:
        - mino-api-staging.qa.us-east-1.dev.gen6bk.com
        - mino-api-qa.dev.gen6bk.com
  rules:
    - host: mino-api-staging.qa.us-east-1.dev.gen6bk.com
      http:
        paths:
          - path: /webhooks/v1
            backend:
              serviceName: mino-webhooks
              servicePort: https
